# hetfit_scientific

./: .gitattributes  .gitignore  LICENSE.txt  README.md  ann  ann.onnx  bb.md  generator_model.h5  intro.md  main.md  main.py  model.h5  module_name.md  requirements.txt  setup.cfg
PINN/: pinns.py
anal/: observtional_pass.ipynb  test.ipynb  testing.ipynb
data/: bound.pkl  dataset.csv  dataset.pkl  new
docs/: PINN.md  PINN.pinns.md  main.html  main.md  nets.deep_dense.md  nets.dense.md  nets.design.md  nets.envs.md  nets.md  utils.data_augmentation.md  utils.dataset_loader.md  utils.md  utils.ndgan.md  utils.test.md
docs/PINN/: pinns.html
docs/nets/: deep_dense.html  dense.html  design.html  envs.html
docs/pages/: 📃 Docs.html
docs/utils/: data_augmentation.html  dataset_loader.html  ndgan.html  test.html
images/: main.md
nets/: HET_dense.py  deep_dense.py  dense.py  design.py  envs.py  normflows.py
nets/opti/: blackbox.py
pages/: 🌊 Normalizing flows.py  📃 Docs.py  🔍 Finding design optima.py  🤗 Intro.py  🧪 Optmiziations.py
src/data/: newdata.pkl  test.pkl
src/expfit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: model.onnx
src/nets/: dense.py  design.py  normflows.py
src/utils/: data_augmentation.py  dataset_loader.py  test.py
streamlit/: main.py
utils/: 1d-gan.ipynb  data_augmentation.py  dataset_loader.py  ndgan.py  test.py  vae.py
