[metadata]
name = expfit
version = 1.0.0
author = Korolev K.
author_email = konstantin@mywm.network
description = Data science code for Experimental Data
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/advpropsys/hetfit_scientific
project_urls =
    Bug Tracker = https://github.com/advpropsys/hetfit_scientific-/issues
    repository = https://github.com/advpropsys/hetfit_scientific
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src